--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "vue-smart-pagination",
-  "version": "1.0.0",
+  "version": "2.0.8",
   "description": "Vuejs component",
   "author": "webfriends.by",
-  "private": true,
+  "private": false,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
@@ -13,8 +13,12 @@
   "dependencies": {
     "lodash": "^4.17.10",
     "vue": "^2.5.2",
-    "vue-lodash": "^2.0.0"
+    "postcss-url": "^7.2.1",
+    "postcss-import": "^11.0.0",
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.6"
   },
+  "main": "./src/index.js",
   "devDependencies": {
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
@@ -43,13 +47,10 @@
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "node-notifier": "^5.1.2",
-    "node-sass": "^4.7.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
-    "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
-    "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
     "sass-loader": "^6.0.6",
     "semver": "^5.3.0",
